切换java为openjdk:8u212版本.